check for existing kerning pairs before copying kerning info in cop_kern_right.ff; added a script for glyph name conversion to AGL

--- a/Makefile.scripts
+++ b/Makefile.scripts
@@ -11,6 +11,7 @@ FFSCRIPTS=add_accented.ff \
         add_private.ff \
         add_subfigs.ff \
         add_supnum.ff \
+        adobe_name.ff \
         alt_sub.ff \
         anchors.ff \
         anchors_sc.ff \
